Fix mvn test issue. Downgrade surefire plugin. Add modify implementation